--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>404  - KURURU Blog</title><meta name="description" content="About FeelIt Theme"><meta property="og:title" content="404 Page not found" />
+        <title>404 Page not found - KURURU Blog</title><meta name="description" content="About FeelIt Theme"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="About FeelIt Theme" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://rick00kim.github.io/kururu-blog/404.html" />
@@ -23,20 +23,20 @@
             <a href="/kururu-blog/" title="KURURU Blog">KURURU Blog</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/kururu-blog/posts/"> Posts </a><a class="menu-item" href="/kururu-blog/tags/"> Tags </a><a class="menu-item" href="/kururu-blog/categories/"> Categories </a><a class="menu-item" href="/kururu-blog/about/"> About </a><span class="menu-item delimiter"></span><span class="menu-item language" title="">Korean<i class="fas fa-chevron-right fa-fw"></i>
+            <div class="menu-inner"><a class="menu-item" href="/kururu-blog/posts/"> Posts </a><a class="menu-item" href="/kururu-blog/tags/"> Tags </a><a class="menu-item" href="/kururu-blog/categories/"> Categories </a><a class="menu-item" href="/kururu-blog/about/"> About </a><span class="menu-item delimiter"></span><span class="menu-item language" title="Select Language">Korean<i class="fas fa-chevron-right fa-fw"></i>
                         <select class="language-select" id="language-select-desktop" onchange="location = this.value;"><option value="/en/404.html">English</option><option value="/404.html" selected>Korean</option></select>
                     </span><span class="menu-item search" id="search-desktop">
-                        <input type="text" placeholder="" id="search-input-desktop">
-                        <a href="#" class="search-button search-toggle" id="search-toggle-desktop" title="">
+                        <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
+                        <a href="#" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw"></i>
                         </a>
-                        <a href="#" class="search-button search-clear" id="search-clear-desktop" title="">
+                        <a href="#" class="search-button search-clear" id="search-clear-desktop" title="Clear">
                             <i class="fas fa-times-circle fa-fw"></i>
                         </a>
                         <span class="search-button search-loading" id="search-loading-desktop">
                             <i class="fas fa-spinner fa-fw fa-spin"></i>
                         </span>
-                    </span><a href="javascript:void(0);" class="menu-item theme-switch" title="">
+                    </span><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
             </div>
@@ -54,11 +54,11 @@
         </div>
         <div class="menu" id="menu-mobile"><div class="search-wrapper">
                     <div class="search mobile" id="search-mobile">
-                        <input type="text" placeholder="" id="search-input-mobile">
-                        <a href="#" class="search-button search-toggle" id="search-toggle-mobile" title="">
+                        <input type="text" placeholder="Search titles or contents..." id="search-input-mobile">
+                        <a href="#" class="search-button search-toggle" id="search-toggle-mobile" title="Search">
                             <i class="fas fa-search fa-fw"></i>
                         </a>
-                        <a href="#" class="search-button search-clear" id="search-clear-mobile" title="">
+                        <a href="#" class="search-button search-clear" id="search-clear-mobile" title="Clear">
                             <i class="fas fa-times-circle fa-fw"></i>
                         </a>
                         <span class="search-button search-loading" id="search-loading-mobile">
@@ -66,12 +66,12 @@
                         </span>
                     </div>
                     <a href="#" class="search-cancel" id="search-cancel-mobile">
-                        
+                        Cancel
                     </a>
-                </div><a class="menu-item" href="/kururu-blog/posts/" title="">Posts</a><a class="menu-item" href="/kururu-blog/tags/" title="">Tags</a><a class="menu-item" href="/kururu-blog/categories/" title="">Categories</a><a class="menu-item" href="/kururu-blog/about/" title="">About</a><div class="menu-item"><a href="javascript:void(0);" class="theme-switch" title="">
+                </div><a class="menu-item" href="/kururu-blog/posts/" title="">Posts</a><a class="menu-item" href="/kururu-blog/tags/" title="">Tags</a><a class="menu-item" href="/kururu-blog/categories/" title="">Categories</a><a class="menu-item" href="/kururu-blog/about/" title="">About</a><div class="menu-item"><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
-            </div><span class="menu-item language" title="">Korean<i class="fas fa-chevron-right fa-fw"></i>
+            </div><span class="menu-item language" title="Select Language">Korean<i class="fas fa-chevron-right fa-fw"></i>
                     <select class="language-select" onchange="location = this.value;"><option value="/en/404.html">English</option><option value="/404.html" selected>Korean</option></select>
                 </span></div>
     </div>
@@ -83,14 +83,14 @@
 </div><main class="main">
                 <div class="container"><div class="page" id="content-404">
         <h2>404</h2>
-        <p></p>
-        <a href="/kururu-blog/" title=""></a>
-        <a href="javascript:void(0);" title="" onclick="window.history.back();"></a>
+        <p>The page you&#39;re looking for doesn&#39;t exist. Sorry.</p>
+        <a href="/kururu-blog/" title="Home">Home</a>
+        <a href="javascript:void(0);" title="Back" onclick="window.history.back();">Back</a>
     </div></div>
             </main>
             <footer class="footer"></footer>
         </div>
 
-        <div id="fixed-buttons"><a href="#" id="back-to-top" class="fixed-button" title="">
+        <div id="fixed-buttons"><a href="#" id="back-to-top" class="fixed-button" title="Back to Top">
                 <i class="fas fa-chevron-up fa-fw"></i>
-            </a></div><link rel="stylesheet" href="/kururu-blog/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/kururu-blog/lib/animate/animate.min.css"><script src="/kururu-blog/lib/autocomplete/autocomplete.min.js"></script><script src="/kururu-blog/lib/algoliasearch/algoliasearch-lite.umd.min.js"></script><script src="/kururu-blog/lib/lazysizes/lazysizes.min.js"></script><script>window.config={"code":{"maxShownLines":10},"search":{"algoliaAppID":"UAL0NNJWXE","algoliaIndex":"index.en","algoliaSearchKey":"7b7fbdfb7ee82ee61901f2c6b09b05be","highlightTag":"em","maxResultLength":10,"noResultsFound":"","snippetLength":30,"type":"algolia"}};</script><script src="/kururu-blog/js/theme.min.js"></script></body></html>
+            </a></div><link rel="stylesheet" href="/kururu-blog/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/kururu-blog/lib/animate/animate.min.css"><script src="/kururu-blog/lib/autocomplete/autocomplete.min.js"></script><script src="/kururu-blog/lib/algoliasearch/algoliasearch-lite.umd.min.js"></script><script src="/kururu-blog/lib/lazysizes/lazysizes.min.js"></script><script>window.config={"code":{"maxShownLines":10},"search":{"algoliaAppID":"UAL0NNJWXE","algoliaIndex":"index.en","algoliaSearchKey":"7b7fbdfb7ee82ee61901f2c6b09b05be","highlightTag":"em","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"algolia"}};</script><script src="/kururu-blog/js/theme.min.js"></script></body></html>
