--- a/offline/index.html
+++ b/offline/index.html
@@ -11,9 +11,9 @@
             <main class="main">
                 <div class="container"><article id="content-404">
         <h2>Offline</h2>
-        <p></p>
-        <a href="/kururu-blog/" title=""></a>
-        <a href="javascript:void(0);" title="" onclick="window.history.back();"></a>
+        <p>You&#39;re offline. Check your internet connection.</p>
+        <a href="/kururu-blog/" title="Home">Home</a>
+        <a href="javascript:void(0);" title="Back" onclick="window.history.back();">Back</a>
     </article></div>
             </main>
         </div>
