--- a/en/about/index.html
+++ b/en/about/index.html
@@ -155,7 +155,7 @@ Cancel
 <p>Because of my current work environment, I am comfortable for working on Linux or Unix systems more than Windows system</p>
 <p>I&rsquo;m interested in new IT technology and I am very experimental</p>
 <p>Then, I am current working for devops engineer in Korea</p>
-<p>I mainly devleop Game Server using cloud systems (AWS, GCP)</p>
+<p>I mainly devleop Game Server(Realtime) using cloud systems (AWS, GCP)</p>
 <h2 id=work-history>WORK HISTORY</h2>
 <h3 id=afihttpswwwafidevcom><a href=https://www.afidev.com/ target=_blank rel="noopener noreffer">AFI</a></h3>
 <h5 id=devops-engineer>DevOps Engineer</h5>
