--- a/en/about/index.html
+++ b/en/about/index.html
@@ -36,7 +36,7 @@ Because of my current work environment, I am comfortable for working on Linux or
 </div>
 <div class=menu>
 <div class=menu-inner><a class=menu-item href=/kururu-blog/en/posts/> Posts </a><a class=menu-item href=/kururu-blog/en/tags/> Tags </a><a class=menu-item href=/kururu-blog/en/categories/> Categories </a><a class="menu-item active" href=/kururu-blog/en/about/> About </a><span class="menu-item delimiter"></span><span class="menu-item language" title="Select Language">English<i class="fas fa-chevron-right fa-fw"></i>
-<select class=language-select id=language-select-desktop onchange="location=this.value"><option value=/kururu-blog/en/about/ selected>English</option><option value=/kururu-blog/about/>Korean</option></select>
+<select class=language-select id=language-select-desktop onchange="location=this.value"><option value=/kururu-blog/en/about/ selected>English</option></select>
 </span><span class="menu-item search" id=search-desktop>
 <input type=text placeholder="Search titles or contents..." id=search-input-desktop>
 <a href=# class="search-button search-toggle" id=search-toggle-desktop title=Search>
@@ -84,7 +84,7 @@ Cancel
 <i class="fas fa-adjust fa-fw"></i>
 </a>
 </div><span class="menu-item language" title="Select Language">English<i class="fas fa-chevron-right fa-fw"></i>
-<select class=language-select onchange="location=this.value"><option value=/kururu-blog/en/about/ selected>English</option><option value=/kururu-blog/about/>Korean</option></select>
+<select class=language-select onchange="location=this.value"><option value=/kururu-blog/en/about/ selected>English</option></select>
 </span></div>
 </div>
 </header><div class="search-dropdown desktop">
